# obsidian-wiki

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
src/ob_wiki/: __main__.py  entries.py  parser.py  vault.py
src/ob_wiki/assets/spec/: hyper-tags.yaml  wiki-convention.md
src/ob_wiki/assets/views/wikiIndex/: view.css  view.js
src/ob_wiki/commands/: cmd_export.py  cmd_index.py  cmd_init.py  cmd_lint.py  cmd_list.py  cmd_new.py  cmd_papers.py  cmd_search.py  cmd_setup.py  cmd_show.py  cmd_stats.py
