[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ob-wiki"
version = "1.0.0"
description = "CLI for Obsidian _Wiki/ management — list, search, lint, scaffold, and export research wiki entries"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["obsidian", "wiki", "knowledge-base", "markdown", "cli", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
ob-wiki = "ob_wiki.__main__:main"

[project.urls]
Repository = "https://github.com/kanxh/ob-wiki"

[tool.hatch.build.targets.wheel]
packages = ["src/ob_wiki"]
artifacts = ["src/ob_wiki/assets/**", "src/ob_wiki/templates/**"]

[tool.hatch.build.targets.sdist]
include = ["src/ob_wiki/", "README.md"]
